Test run_number 2

--- a/.github/workflows/two.yml
+++ b/.github/workflows/two.yml
@@ -10,3 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "TEST ${{ github.event.workflow_run.run_number }}"
+      - run: echo "My run number ${{ github.run_number }}"
