--- a/.github/workflows/two.yml
+++ b/.github/workflows/two.yml
@@ -9,5 +9,10 @@ jobs:
   my-step:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate build number
+        uses: einaregilsson/build-number@v3
+        with:
+          token: ${{secrets.GIT_TOK}}
       - run: echo "TEST ${{ env.MYBUILD }}"
       - run: echo "My run number ${{ github.run_number }}"
+      - run: echo "Build number is $BUILD_NUMBER"
