--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -4,18 +4,18 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Build image image:$GITHUB_RUN_NUMBER"
+      - run: echo "Build image image:${{ env.GITHUB_RUN_NUMBER }}"
 
   tests:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Test 1 image:$GITHUB_RUN_NUMBER"
-      - run: echo "Test 2 image:$GITHUB_RUN_NUMBER"
+      - run: echo "Test 1 image:${{ env.GITHUB_RUN_NUMBER }}"
+      - run: echo "Test 2 image:${{ env.GITHUB_RUN_NUMBER }}"
     needs: [build-image]
 
   deploy-to-dev:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Deploy-to-dev image:$GITHUB_RUN_NUMBER"
+      - run: echo "Deploy-to-dev image:${{ env.GITHUB_RUN_NUMBER }}"
     needs: [tests]
