--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - run: echo "Test 1 image:${{ github.run_number }}"
       - run: echo "Test 2 image:${{ github.run_number }}"
+      - run: echo "REF ${{ github.ref }}"
     needs: [build-image]
 
   deploy-to-dev:
