--- a/.github/workflows/Run tests.yaml
+++ b/.github/workflows/Run tests.yaml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - run: echo "Test 1 image:$BUILD_NUMBER"
       - run: echo "Test 2 image:$BUILD_NUMBER"
+      - run: exit 1
     needs: [build-image]
 
 #  deploy-to-dev:
