--- a/.github/workflows/ya-azure-dev-cicd.yaml
+++ b/.github/workflows/ya-azure-dev-cicd.yaml
@@ -11,17 +11,20 @@ env:
 
 jobs:
   build-image:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Build image image:$BUILD_NUMBER"
 
   deploy-to-dev:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploy-to-dev image:$BUILD_NUMBER"
     needs: [build-image]
 
   deploy-to-yat:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploy-to-yat image:${{ github.run_number }}"
