--- a/.github/workflows/ya-azure-dev-cicd.yaml
+++ b/.github/workflows/ya-azure-dev-cicd.yaml
@@ -10,6 +10,14 @@ env:
   BUILD_NUMBER: ${{ github.run_number }}
 
 jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print github context
+        env:
+            GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
   build-image:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
