--- a/.github/workflows/azure-uat-cicd.yaml
+++ b/.github/workflows/azure-uat-cicd.yaml
@@ -1,10 +1,8 @@
 name: Deploy azure uat
+
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - '.*'
+  release:
+    types: [published]
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
