--- a/.github/workflows/Run tests.yaml
+++ b/.github/workflows/Run tests.yaml
@@ -1,15 +1,27 @@
 name: Run tests
+#on:
+#  push:
+#    branches:
+#      - '*'
+#    tags-ignore:
+#      - '*'
+
 on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
+  pull_request:
+    types: [opened, edited, synchronize, reopened]
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
 
 jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print github context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
   build-image:
     runs-on: ubuntu-latest
     steps:
@@ -21,17 +33,3 @@ jobs:
       - run: echo "Test 1 image:$BUILD_NUMBER"
       - run: echo "Test 2 image:$BUILD_NUMBER"
     needs: [build-image]
-
-#  deploy-to-dev:
-#    if: github.ref == 'refs/heads/main'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - run: echo "Deploy-to-dev image:$BUILD_NUMBER"
-#    needs: [tests]
-#
-#  deploy-to-yat:
-#    if: github.ref == 'refs/tags/*'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - run: echo "Deploy-to-yat image:${{ github.run_number }}"
-#    needs: [tests]
