--- a/.github/workflows/ya-azure-dev-cicd.yaml
+++ b/.github/workflows/ya-azure-dev-cicd.yaml
@@ -1,23 +1,43 @@
 name: Deploy to yandex and azure dev environment
+#on:
+#  workflow_run:
+#    workflows: ["Run tests"]
+#    branches: [main]
+#    types:
+#      - completed
+
 on:
-  workflow_run:
-    workflows: ["Run tests"]
-    branches: [main]
-    types:
-      - completed
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - '*'
 
 env:
-  BUILD_NUMBER: ${{ github.event.workflow_run.run_number }}
+  BUILD_NUMBER: ${{ github.run_number }}
 
 jobs:
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print github context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
+  build-image:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Build image image:$BUILD_NUMBER"
+
   deploy-ya-dev:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploy to dev yandex image:$BUILD_NUMBER"
+    needs: [build-image]
 
   deploy-azure-dev:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploy to dev azure image:$BUILD_NUMBER"
+    needs: [build-image]
