--- a/.github/workflows/Run tests.yaml
+++ b/.github/workflows/Run tests.yaml
@@ -12,6 +12,7 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
+  BRANCH_NAME: ${{ head_ref }}
 
 jobs:
   debug:
@@ -25,11 +26,11 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Build image image:$BUILD_NUMBER"
+      - run: echo "Build image image:$BRANCH_NAME-$BUILD_NUMBER"
 
   tests:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Test 1 image:$BUILD_NUMBER"
-      - run: echo "Test 2 image:$BUILD_NUMBER"
+      - run: echo "Test 1 image:$BRANCH_NAME-$BUILD_NUMBER"
+      - run: echo "Test 2 image:$BRANCH_NAME-$BUILD_NUMBER"
     needs: [build-image]
