Fix Branch name

--- a/.github/workflows/ya-azure-dev-cicd.yaml
+++ b/.github/workflows/ya-azure-dev-cicd.yaml
@@ -15,7 +15,7 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
-  BRANCH_NAME: ${{ head_ref }}
+  BRANCH_NAME: ${{ github.head_ref }}
 
 jobs:
   debug:
