Fix Branch name for main

--- a/.github/workflows/ya-azure-dev-cicd.yaml
+++ b/.github/workflows/ya-azure-dev-cicd.yaml
@@ -1,11 +1,4 @@
 name: Deploy to yandex and azure dev environment
-#on:
-#  workflow_run:
-#    workflows: ["Run tests"]
-#    branches: [main]
-#    types:
-#      - completed
-
 on:
   push:
     branches:
@@ -15,7 +8,7 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
-  BRANCH_NAME: ${{ github.head_ref }}
+  BRANCH_NAME: "main"
 
 jobs:
   debug:
