--- a/.github/workflows/Run tests.yaml
+++ b/.github/workflows/Run tests.yaml
@@ -12,7 +12,7 @@ on:
 
 env:
   BUILD_NUMBER: ${{ github.run_number }}
-  BRANCH_NAME: ${{ github.head_ref }}
+  BRANCH_REF: ${{ github.ref }}
 
 jobs:
   debug:
@@ -26,11 +26,11 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Build image image:$BRANCH_NAME-$BUILD_NUMBER"
+      - run: echo "Build image image:${BRANCH_REF##*/}-$BUILD_NUMBER"
 
   tests:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Test 1 image:$BRANCH_NAME-$BUILD_NUMBER"
-      - run: echo "Test 2 image:$BRANCH_NAME-$BUILD_NUMBER"
+      - run: echo "Test 1 image:${BRANCH_REF##*/}-$BUILD_NUMBER"
+      - run: echo "Test 2 image:${BRANCH_REF##*/}-$BUILD_NUMBER"
     needs: [build-image]
